Extend `root` to full page and put `controls` in-line for styling later

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -10,4 +10,10 @@ body {
     background-color: #333;
     font-family: 'Verdana';
     color: white;
+    overflow: hidden;
+}
+
+#root {
+    height: 100vh;
+    width: auto;
 }
