--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -39,3 +39,10 @@
     padding-right: 10px;
     background-color: #3484fc;
 }
+
+.SettingsButton svg {
+    color: white;
+    margin-left: 20px;
+    width: 20px;
+    height: 20px;
+}
