little style changes

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -13,12 +13,11 @@
 }
 
 body {
-    @apply bg-white dark:bg-[#292F36] transition-all;
-    @apply bg-gradient-to-t from-indigo-500/20 to-[#292F36];
+    @apply bg-white dark:bg-black transition-all dark:text-white;
+    @apply bg-gradient-to-t from-indigo-900/25 to-black;
     background-attachment: fixed;
-
-    font-family: "Verdana", sans-serif;
     --nav-height: 13vh;
+    font-family: GAU_CUBE_R;
     padding-top: var(--nav-height);
     * {
         @apply transition-all;
@@ -113,4 +112,11 @@ h1 {
 .clear {
     clear: both;
     height: 105px;
+}
+
+.navi-links > * {
+    @apply text-indigo-900 transition-all;
+    &:hover {
+        @apply text-indigo-600;
+    }
 }
