--- a/src/css/Settings.scss
+++ b/src/css/Settings.scss
@@ -20,7 +20,7 @@ tr {
 .SettingsOptions {
     letter-spacing: 1px;
     font-family: sans-serif;
-    font-size: .8rem;
+    font-size: 0.8rem;
     width: 50%;
     background-color: #1f2838;
 }
@@ -41,20 +41,20 @@ tr {
     width: 20px;
     height: 20px;
     vertical-align: sub;
-    color: #2980B9;
+    color: #2980b9;
 }
 
 #check {
     width: 20px;
     height: 20px;
-    accent-color: #2980B9;
+    accent-color: #2980b9;
     &:hover {
         cursor: pointer;
     }
 }
 
 .dropbtn {
-    background-color: #2980B9;
+    background-color: #2980b9;
     color: white;
     padding: 5px;
     font-size: 16px;
@@ -64,8 +64,9 @@ tr {
     cursor: pointer;
 }
 
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
+.dropbtn:hover,
+.dropbtn:focus {
+    background-color: #2980b9;
 }
 
 .dropdown {
@@ -78,7 +79,7 @@ tr {
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -95,7 +96,7 @@ tr {
 }
 
 .show {
-    display:block;
+    display: block;
 }
 
 .dirInputText {
@@ -113,4 +114,5 @@ tr {
     &:focus {
         outline: none;
     }
+    font-size: 0.8rem;
 }
