Add `clear` divs to prevent content from being hidden by title bar and player

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -53,7 +53,7 @@ h1 {
 
 .titlebar {
     @apply flex justify-end h-8 fixed inset-x-0 top-0 select-none;
-    background: #1f2838;
+    @apply bg-gradient-to-r from-slate-900 to-slate-800;
     z-index: 10000;
 }
 
@@ -109,7 +109,12 @@ h1 {
     }
 }
 
-.clear {
+.clearTop {
+    clear: both;
+    height: 30px;
+}
+
+.clearBottom {
     clear: both;
     height: 105px;
 }
