--- a/src/css/SearchTrack.scss
+++ b/src/css/SearchTrack.scss
@@ -1,8 +1,10 @@
 .SearchResult {
-  @apply flex flex-wrap items-center my-0 mx-auto p-5 overflow-hidden;
-  &:hover {
+    @apply flex flex-wrap items-center my-0 mx-auto p-5 overflow-hidden;
+    font-family: "Verdana", sans-serif;
+    font-size: 1.2rem;
+    &:hover {
      background-color: #272d41 !important;
-   }
+    }
 }
 
 .Title {
@@ -26,4 +28,19 @@
         cursor: pointer;
         filter: brightness(0.7);
     }
+}
+
+#statusButtonImage svg:hover {
+    cursor: pointer;
+    filter: brightness(0.7);
+}
+
+#searchDropdownButton {
+    align-self: center;
+    margin-left: -20px;
+}
+
+#searchDropdownButton svg:hover {
+    cursor: pointer;
+    filter: brightness(0.7);
 }
