--- a/src/css/Controls.scss
+++ b/src/css/Controls.scss
@@ -7,6 +7,7 @@
         $p: &;
         @apply ml-4 py-2 px-4 transition-all rounded-full hover:bg-slate-800 dark:hover:bg-slate-300 fill-blue-700 border-white;
         svg {
+            vertical-align: middle;
             path {
                 @apply transition-all text-blue-300 dark:text-white;
             }
