Form basic `PlaylistPage` structure implement dynamic routing for playlists

--- a/src/css/Playlist.scss
+++ b/src/css/Playlist.scss
@@ -47,3 +47,11 @@
         text-overflow: ellipsis;
     }
 }
+
+#NoPlaylistMessage {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    margin-top: 20px;
+}
