--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -168,3 +168,92 @@ h1 {
 .show {
     display: block;
 }
+
+/* MODALS */
+.Modal {
+    display: none;
+    position: fixed;
+    z-index: 10000000000 !important;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.ModalBody {
+    background-color: #181c3b;
+    margin: 15% auto;
+    padding: 20px;
+    border: 2px solid #12326e;
+    border-radius: 10px;
+    width: 500px;
+
+    h2 {
+        font-size: 20px;
+        color: #fff;
+        margin-bottom: 20px;
+    }
+
+    p {
+        font-size: 16px;
+        color: #dcdcdc;
+        margin-bottom: 10px;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 20px;
+    }
+
+    input {
+        width: 100%;
+        height: 40px;
+        border-radius: 5px;
+        border: 1px solid #12326e;
+        padding: 10px;
+        font-size: 16px;
+        color: #fff;
+        background: #181c3b;
+    }
+
+    input:focus {
+        outline: none;
+    }
+}
+
+.CloseModal {
+    color: #aaa;
+    position: absolute;
+    margin-top: -10px;
+    margin-left: 440px;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.CloseModal:hover,
+.CloseModal:focus {
+    color: #ffffff;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.ModalSubmit {
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #12326e;
+    padding: 10px 0 33px 0;
+    font-size: 16px;
+    color: #fff;
+    background: #181c3b;
+    margin-top: 20px;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #12326e;
+    }
+}
