--- a/src/css/SearchTrack.scss
+++ b/src/css/SearchTrack.scss
@@ -46,13 +46,14 @@
 }
 
 .TrackOptions {
-    margin-top: 7.5px
+    margin-top: 7.5px;
+    text-align: left !important;
 }
 
 .TrackOptionsButtons {
     margin-right: 20px;
 
     &:hover {
-        filter: brightness(0.7);
+        color: #3484fc !important;
     }
 }
