Add profile dropdown on `Navbar` - with logout function

--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -95,3 +95,13 @@
         filter: brightness(0.8);
     }
 }
+
+#NavUserDropdown {
+    position: absolute;
+    right: 0;
+    margin-top: 50px;
+
+    #NavLogout:hover {
+        background-color: #992123;
+    }
+}
