Let user delete `Tracks` from playlists

--- a/src/css/Playlist.scss
+++ b/src/css/Playlist.scss
@@ -75,6 +75,7 @@
     color: #fff;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
 
     &:hover {
         background-color: transparent;
