--- a/src/css/Playlist.scss
+++ b/src/css/Playlist.scss
@@ -156,7 +156,7 @@
         }
     }
 
-    #BannerUpload {
+    #PlaylistSettingsButton {
         position: absolute;
         z-index: 100000;
         right: 0;
