--- a/src/css/Playlist.scss
+++ b/src/css/Playlist.scss
@@ -16,6 +16,7 @@
     display: flex;
     flex-flow: row wrap;
     column-gap: 20px;
+    row-gap: 20px;
 
     :hover {
         filter: brightness(0.7);
@@ -55,6 +56,7 @@
 
     p {
         font-size: 20px !important;
+        margin-top: 0 !important;
     }
 }
 
@@ -128,7 +130,7 @@
         height: 150px;
         object-fit: cover;
         overflow: hidden;
-        z-index: 1000;
+        z-index: 1100;
     }
 
     .PlaylistHeaderInfo {
