--- a/src/css/Playlist.scss
+++ b/src/css/Playlist.scss
@@ -11,7 +11,6 @@
 }
 
 .PlaylistsGrid {
-    font-family: "Verdana", sans-serif;
     padding: 20px;
     display: flex;
     flex-flow: row wrap;
@@ -19,15 +18,15 @@
     row-gap: 20px;
 
     :hover {
-        filter: brightness(0.7);
+        filter: brightness(0.9);
         cursor: pointer;
+        color: white
     }
 }
 
 .PlaylistCards {
-    display: flex;
     background: linear-gradient(90deg, #181c3b 0%, #333479 100%);
-    border-radius: 0 0 15px 0;
+    flex-direction: row;
 
     img {
         width: 150px;
@@ -35,13 +34,11 @@
         object-fit: cover;
         overflow: hidden;
     }
-
 }
 
 .PlaylistCardText {
     div {
-        line-height: 47px;
-        padding: 10px;
+        margin-top: 6px;
         width: 250px;
         overflow: hidden;
         white-space: nowrap;
@@ -178,27 +175,32 @@
 .PlaylistContent {
     margin: 0 auto;
     width: 800px;
-    background: linear-gradient(90deg, #181c3b 0%, #333479 100%);
+    background: #1e293b;
 
     .PlaylistTrack {
         display: flex;
         flex-direction: row;
-        padding: 30px 10px;
+        padding: 10px 5px;
         width: 800px;
+        height: fit-content;
 
         &:hover {
-            background: #181c3b;
+            background: #253244;
+        }
+
+        a {
+            align-self: center;
         }
 
         img {
-            width: 100px;
-            height: 100px;
+            width: 80px;
+            height: 80px;
             object-fit: cover;
             overflow: hidden;
         }
 
         #statusButton {
-            margin-right: 15px;
+            margin-right: 10px;
             margin-left: 5px;
 
             svg {
@@ -220,7 +222,7 @@
             margin-left: 10px;
 
             h2 {
-                font-size: 18px;
+                font-size: 15px;
                 color: #fff;
                 overflow: hidden;
                 white-space: nowrap;
@@ -230,13 +232,16 @@
             p {
                 font-size: 14px;
                 color: #9b9b9b;
-                margin: 0;
+                margin-top: 5px;
             }
 
             .PlaylistTrackButtons {
                 display: flex;
                 flex-direction: row;
-                margin-top: 10px;
+                font-size: 15px;
+                color: #b9b9b9;
+                gap: 20px;
+                margin-top: 12px;
             }
         }
     }
