--- a/src/css/SearchTrack.scss
+++ b/src/css/SearchTrack.scss
@@ -2,6 +2,7 @@
     @apply flex flex-wrap items-center my-0 mx-auto p-5 overflow-hidden;
     font-family: "Verdana", sans-serif;
     font-size: 1rem;
+    max-width: 800px;
 
     &:hover {
         background-color: #272d41 !important;
@@ -30,10 +31,11 @@
 }
 
 #SearchResultImage {
-    width: 80px;
-    height: 80px;
+    max-width: 90px;
+    max-height: 90px;
     object-fit: cover;
     overflow: hidden;
+    margin-bottom: 0;
 
     &:hover {
         cursor: pointer;
